iki/local.css
/* ikiwiki local style sheet */

/* Add local styling here, instead of modifying style.css. */

/* html{max-width:70em;margin:2em auto;color-scheme:dark light}h1,h2,h3,h4,h5{font-weight:400} */

body {
  background: #141415;
  color-scheme: dark light;
  color: #cdcdcd;
  font-family: sans-serif;
  max-width: 60em;
  margin: 0 auto;
  padding: 10px;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
}

a {
  text-decoration: none;
  color: #3291ff;
}

a:visited {
  color: #931fff;
}

a:hover {
  text-decoration: underline;
}

:target {
  background: #443;
}

code, kbd, pre, textarea {
  border: none;
  color: #eee;
}

code, kbd, pre, .flex div, .box, textarea {
  background: #222;
}

.box, .alert {
  padding: 10px;
  margin-top: 10px;
}

pre, .flex div {
  padding: 5px;
  overflow: auto;
}

mark {
  background: #dc5;
}

summary {
  cursor: pointer;
  padding: 10px;
}

th, summary, input {
  background: #333;
  color: #cdcdcd;
}

th, td, details, input {
  border: 1px solid #333;
}

input[type=button], input[type=submit] {
  cursor: pointer;
}

th, td {
  padding: 5px;
}

table, details *:not(summary) {
  border-collapse: collapse;
  margin: 10px 0;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -10px;
}

.flex div {
  display: flex;
  min-width: 12em;
  width: 100%;
  margin: 10px;
  flex: 1 1 0;
  flex-direction: column;
}

.flex div h3 {
  margin: 0;
}

.flex div p {
  flex: 1 1 0;
}

fieldset {
  border: 1px solid #999;
}

blockquote {
  border-left: 1px solid #333;
  padding-left: 5px;
}

.alert {
  background: #b01111;
}

div.recentchanges {
  background: #222;
  color: #cdcdcd !important;
}

.recentchanges .changelog, .othersignin,
.popup:hover .balloon, .popup:focus .balloon {
  background: #141415 !important;
  color: #eee !important;
}

@media (prefers-color-scheme: light) {
  body {
    background: white;
    color: #141415;
  }
  a {
    color: #0000EE;
  }
  a:visited {
    color: #551A8B;
  }
  th, summary, input {
    background: #ccc;
    color: #141415;
  }
  th, td, details, input {
    border: 1px solid #ccc;
  }
  code, kbd, pre, textarea {
    color: #111;
  }
  code, kbd, pre, .flex div, .box, textarea {
    background: #ddd;
  }
  blockquote {
    border-left: 1px solid #ddd;
  }
  .alert {
    background: #f53838;
  }
  div.recentchanges {
    background: #eee;
    color: black !important;
  }
  .recentchanges .changelog, .othersignin,
  .popup:hover .balloon, .popup:focus .balloon {
    background: white !important;
    color: black !important;
  }
}

